plugins {
    id 'org.springframework.boot' version '2.6.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'maven-publish'
    id 'java'
}

group = 'com.pj'
version = '1.0.0-SNAPSHOT'
description = 'squash-rest-app'
sourceCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

repositories {
    mavenCentral()
}

dependencies {
    /* Spring Boot */
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    /* Lombok */
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    /* JWT */
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.11.2'

    /* Other dependencies */

    // Argon2
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

    // Commons util
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    //noinspection GradlePackageUpdate
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'commons-validator:commons-validator:1.7'

    // Jackson / GSON / Guava / XML
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.13.1'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.simpleframework:simple-xml:2.7.1'

    //noinspection GradlePackageUpdate
    implementation 'org.postgresql:postgresql:42.3.1'
    implementation 'com.thedeanda:lorem:2.1'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'org.freemarker:freemarker:2.3.31'
    implementation 'com.yannbriancon:spring-hibernate-query-utils:2.0.0'
    implementation 'com.vdurmont:emoji-java:5.1.1'
    testImplementation 'org.awaitility:awaitility:4.1.1'
}

test {
    useJUnitPlatform()
}
